# Fluid-dileptons

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dilepton_config.txt  example.cpp  main.cpp  plot_output.py  truncate-smearing.nb  weight_noMC_proof.nb
example/: CMakeLists.txt  dilepton_config.txt  example.cpp
include/: VMtables.h  acceptance.h  dilepton.h  fluiddileptons.h  hydrocell.h  output.h  setup.h  spectrum.h  vector.h
initial_tests/: dRdM_rhovac.txt  phasespace_output_rholat.txt  phasespace_output_rhovac.txt  plot_output.py
new_src/: dRdM_lat.txt  dRdM_lat_noFF.txt  dRdM_pQGP.txt  phasespace.cpp  phasespace_output.txt  phasespace_output_noFF.txt  plot_output.py
src/: VMtables.cpp  acceptance.cpp  dilemit_rapp.cpp  dilemit_rapp_hr.cpp  dilepton.cpp  fourpion_mix.cpp  grid.cpp  hydrocell.cpp  output.cpp  qgpemit_lat.cpp  setup.cpp  spectrum.cpp  vhlle_read.cpp
tools/: dilepton_config.txt  example.cpp  plot_output.py
